[gd_scene load_steps=5 format=2]

[ext_resource path="res://Experiments/FPS_UI_Test/very_crappy_crosshair.png" type="Texture" id=1]
[ext_resource path="res://Source/Objects/UI.gd" type="Script" id=2]

[sub_resource type="Shader" id=12]
code = "shader_type canvas_item;

uniform float blur_amount = 3.0;

void fragment(){
	COLOR.rgb = texture(SCREEN_TEXTURE, SCREEN_UV, blur_amount).rgb;
}
"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 12 )
shader_param/blur_amount = 3.0

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MainMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlurShader" type="ColorRect" parent="MainMenu"]
material = SubResource( 11 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartGame" type="Button" parent="MainMenu"]
anchor_left = 0.518
anchor_top = 0.5
anchor_right = 0.518
anchor_bottom = 0.5
margin_left = -41.432
margin_top = 134.0
margin_right = 41.568
margin_bottom = 154.0
text = "Start Game"

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
anchor_left = 0.521
anchor_top = 0.5
anchor_right = 0.521
anchor_bottom = 0.5
margin_left = -278.504
margin_top = -137.0
margin_right = 278.496
margin_bottom = 75.0
color = Color( 0.168627, 0.505882, 0.247059, 1 )

[node name="RetryMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlurShader" type="ColorRect" parent="RetryMenu"]
material = SubResource( 11 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RetryButton" type="Button" parent="RetryMenu"]
anchor_left = 0.518
anchor_top = 0.5
anchor_right = 0.518
anchor_bottom = 0.5
margin_left = -89.432
margin_top = 50.0
margin_right = 88.568
margin_bottom = 137.0
text = "Retry From Checkpoint"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlurShader" type="ColorRect" parent="EndScreen"]
material = SubResource( 11 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EndScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.0
margin_top = -75.0
margin_right = 67.0
margin_bottom = 75.0
text = "End Reached!

Thank You for Playing

Credits:
----
-----
----
-----"
align = 1

[node name="HUD" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrosshairControl" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="HUD/CrosshairControl"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrosshairTexture" type="TextureRect" parent="HUD/CrosshairControl/CenterContainer"]
margin_left = 496.0
margin_top = 284.0
margin_right = 528.0
margin_bottom = 316.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[connection signal="pressed" from="MainMenu/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="RetryMenu/RetryButton" to="." method="_on_RetryButton_pressed"]
